# good-ormning

./: .gitignore  Cargo.toml  readme.md
integration_tests/: Cargo.toml  build.rs  build_pg.rs  build_sqlite.rs
integration_tests/src/: lib.rs
integration_tests/tests/: hello_world.rs  pg.rs  sqlite.rs
integrationtests/: Cargo.toml  build.rs  build_pg.rs  build_sqlite.rs
integrationtests/src/: lib.rs
integrationtests/tests/: pg.rs  sqlite.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  pg.rs  sqlite.rs
src/: lib.rs  utils.rs
src/buildtime/: mod.rs
src/buildtime/graphmigrate/: graph.rs  mod.rs
src/buildtime/pg/: mod.rs  types.rs
src/buildtime/pg/queries/: delete.rs  expr.rs  insert.rs  select.rs  update.rs  utils.rs
src/buildtime/pg/schema/: constraint.rs  field.rs  index.rs  mod.rs  node.rs  table.rs  utils.rs
src/buildtime/sqlite/: mod.rs  types.rs
src/buildtime/sqlite/queries/: delete.rs  expr.rs  insert.rs  select.rs  update.rs  utils.rs
src/buildtime/sqlite/schema/: constraint.rs  field.rs  index.rs  node.rs  table.rs  utils.rs
src/graphmigrate/: graph.rs  mod.rs
src/pg/: mod.rs  schema.rs  types.rs
src/pg/graph/: constraint.rs  field.rs  index.rs  mod.rs  table.rs  utils.rs
src/pg/queries/: delete.rs  expr.rs  insert.rs  mod.rs  select.rs  update.rs  utils.rs
src/pg/query/: delete.rs  expr.rs  helpers.rs  insert.rs  select.rs  update.rs  utils.rs
src/pg/schema/: constraint.rs  field.rs  index.rs  mod.rs  node.rs  table.rs  utils.rs
src/runtime/: mod.rs
src/sqlite/: mod.rs  types.rs  utils.rs
src/sqlite/graph/: constraint.rs  field.rs  index.rs  mod.rs  table.rs  utils.rs
src/sqlite/queries/: delete.rs  expr.rs  insert.rs  select.rs  update.rs  utils.rs
src/sqlite/query/: delete.rs  expr.rs  helpers.rs  insert.rs  mod.rs  select.rs  select_body.rs  update.rs  utils.rs
src/sqlite/schema/: constraint.rs  field.rs  index.rs  node.rs  table.rs  utils.rs
traits/: Cargo.toml
traits/src/: lib.rs  pg.rs  sqlite.rs
