[package]
name = "good-ormning"
version = "0.3.1"
edition = "2021"
license = "ISC"
description = "Maybe an ORM"
homepage = "https://github.com/andrewbaxter/good-ormning"
repository = "https://github.com/andrewbaxter/good-ormning"
readme = "readme.md"

[features]
default = []
chrono = ["dep:chrono"]
pg = []
sqlite = []

[dependencies]
chrono = { version = "0.4", optional = true }
enum_dispatch = "0.3"
flowcontrol = "0.2.2"
genemichaels-lib = "0.5.0-pre3"
hex = "0.4"
proc-macro2 = "1"
quote = "1"
rpds = "1"
samevariant = "0.0"
stable-hash = "0.4"
syn = "2"

[workspace]
members = ["integration_tests", "runtime"]

[dev-dependencies]
good-ormning-runtime = { path = "runtime", features = [
    "pg",
    "sqlite",
    "chrono",
] }
rusqlite = "0.32"

[package.metadata.docs.rs]
all-features = true
