[package]
name = "good-ormning-runtime"
version = "0.1.12"
edition = "2021"
license = "ISC"
description = "Runtime code for good-ormning"
homepage = "https://github.com/andrewbaxter/good-ormning"
repository = "https://github.com/andrewbaxter/good-ormning"
readme = "../readme.md"

[features]
default = []
chrono = ["dep:chrono"]
pg = ["dep:tokio-postgres"]
sqlite = ["dep:rusqlite"]

[dependencies]
chrono = { version = "0", optional = true }
rusqlite = { version = "0", optional = true }
tokio-postgres = { version = "0", optional = true }

[package.metadata.docs.rs]
all-features = true
